# School-Dropout

./: .gitignore  README.md  best_adaboost.pkl  main.ipynb  pyproject.toml  trabalho2 copy.ipynb  trabalho2.ipynb
