[project]
name = "school-dropout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "feature-engine>=1.8.3",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy >=1.24,<2.2",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scikit-plot>=0.3.7",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "xgboost>=3.0.2",
    "numba>=0.57",
    "shap>=0.45.0",
    "jinja2>=3.1.6",
]
